# yumiot

./: Cargo.toml  README.md  partitions.csv
src/: main.rs
