[package]
name = "yumiot"
version = "0.1.0"
authors = ["yum <yumzi114@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "yumiot"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-println = { version = "0.12.0", features = ["esp32c3"] }
heapless = "0.8.0"
dht11 = "0.3.1"
esp-idf-hal = "0.44.1"
anyhow = "1.0.90"
crossbeam-channel = "0.5.13"
mqtt-protocol = "0.12.0"

[build-dependencies]
embuild = "0.32.0"
